# 2021-Huawei-Embedded-Competition

./: .gitignore  LICENSE  README.md
player/: .gitignore  README.md  judge.sh  pack.sh
player/judge/: case.py  config.py  judge.py  local.py  path.py  reader.py  res.py  solution.py  work.py
player/judge/cases/: Example.case  TestData_23.case  TestData_24.case
player/judge/solu/: Example.solu
player/sdk/code/: .clang-format  CMakeLists.txt  main.cpp
player/sdk/code/include/: ACO.h  AntAlgorithm.h  Dijkstra.h  DisJointSet.h  Graph.h  RouteParser.h  Scheme.h  Scheme_II.h  Solution.h  UnionFindSet.h  data.h
player/sdk/code/source/: ACO.cpp  AntAlgorithm.cpp  CMakeLists.txt  Dijkstra.cpp  Dijkstra.haha  Graph.cpp  RouteParser.cpp  Scheme.cpp  Scheme_II.cpp  Solution.cpp  Solution.haha  data.cpp
player/sdk/shell/: build.sh  run.sh  test.sh
referance/: dijkstra  disjoint-set
